# wd2duckdb

./: Cargo.toml
wikidata-rs/: Cargo.toml
