[package]
name = "wd2duckdb"
version = "0.0.1"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Transform a Wikidata JSON dump into an DuckDB database"
repository = "https://github.com/angelip2303/wd2duckdb"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["wikidata", "duckdb", "json", "dump", "database"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
wikidata-rs = { path = "wikidata-rs" }
clap = { version = "4.1.8", features = ["derive"] }
humantime = "2.1.0"
duckdb = { version="0.10.1", features = ["chrono", "bundled"] }
chrono = "0.4.23"
simd-json = { version = "0.10.3", features = ["allow-non-simd"] }
ahash = "0.8.7"
wikidata = "0.3.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"